# SB_FINAL

./: config.py  pyproject.toml
.github/: README.md
AnonXMusic/: __main__.py
AnonXMusic/core/: call.py  dir.py
AnonXMusic/plugins/: group_logger.py
AnonXMusic/plugins/admins/: callback.py  skip.py
AnonXMusic/plugins/misc/: group_logger.py
AnonXMusic/plugins/play/: play.py
AnonXMusic/utils/: cookie_handler.py  downloader.py  errors.py  exceptions.py  pastebin.py  tuning.py
AnonXMusic/utils/inline/: play.py  start.py
AnonXMusic/utils/stream/: stream.py
strings/langs/: en.yml
