[project]
name = "music"
version = "0.1.0"
description = "Music Bot repo"
readme = ".github/README.md"
requires-python = ">=3.11"

dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.14.1",
    "beautifulsoup4>=4.13.0",
    "dnspython>=2.7.0",
    "ffmpeg-python>=0.2.0",
    "gitpython>=3.1.44",
    "hachoir>=3.3.0",
    "heroku3>=5.2.0",
    "httpx>=0.28.1",

    # REQUIRED FOR COLORED BUTTONS
    "kurigram>=2.2.23",

    "motor>=3.7.1",
    "numpy>=2.2.0",
    "opencv-python>=4.11.0",
    "pillow>=11.1.0",
    "psutil>=7.0.0",
    "py-tgcalls>=2.3.2",
    "pymongo>=4.11.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "speedtest-cli>=2.1.3",
    "spotipy>=2.25.0",
    "tgcrypto>=1.2.5 ; sys_platform != 'win32'",
    "unidecode>=1.3.8",
    "uvloop>=0.21.0 ; sys_platform != 'win32'",
    "yt-dlp[default]>=2026.3.2",
    "yt-search-py>=1.0.0",
]

[dependency-groups]
dev = []